Fix signup form section styling and align the whole section in larger screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,7 @@ main {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
+    text-align: center;
 }
 
 #signup.form > h2 {
@@ -163,8 +164,6 @@ main {
 
 .radio-buttons {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
 }
 
 .join-button {
@@ -246,8 +245,8 @@ main {
 
     #signup-form {
         max-width: 400px;
-        left: 10%;
-        top: 150px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .text-input:hover {
